deploy: 95fa070f03eed5a5c7d00e9b8622628900c139d6

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -31,7 +31,7 @@
     
   
   <meta name="description" content="  Here’s your roadmap for the semester!
-  Readings should be completed before each class session  Class materials (slides, in-class activities, etc.) will be added on the day of class  Assignments are due by 11:59 PM on the day they are due    Week 1 (8/19) Introduction to Data Science tools: R, Python, Markdown, Git, command line tools       Week 2 (8/26) Version Control &amp; Reproducible Research       Week 3 (9/2) Exploratory data analysis       Week 4 (9/9) Data visualization      Week 5 (9/16) Data cleaning and wrangling       Week 6 (9/23) Text Mining      Week 7 (9/30) Scraping, APIs, and Regular Expressions       Week 8 (10/7) Midterm Exam (No class)        Week 9 (10/14) High performance computing, cloud computing      Week 10 (10/21) Managing big data, SQL and non-SQL languages, Google BigQuery       Week 11 (10/28) Interactive visualization and effective data communication I       Week 12 (11/4) Interactive visualization and effective data communication II      Week 13 (11/11) Final project workshop: review project progress, preliminary presentations      Week 14 (11/18) Final Project       ">
+  Readings should be completed before each class session  Class materials (slides, in-class activities, etc.) will be added on the day of class  Assignments are due by 11:59 PM on the day they are due    Week 1 (8/27) Introduction to Data Science tools: R, Python, Markdown, Git, command line tools       Week 2 (9/3) Version Control &amp; Reproducible Research       Week 3 (9/10) Exploratory data analysis       Week 4 (9/17) Data visualization      Week 5 (9/24) Data cleaning and wrangling       Week 6 (10/1) Text Mining      Week 7 (10/8) Scraping, APIs, and Regular Expressions       Week 8 (10/15) Fall Recess (No class)         Week 9 (10/22) Midterm Exam        Week 10 (10/29) High performance computing, cloud computing      Week 11 (11/5) Managing big data, SQL and non-SQL languages, Google BigQuery       Week 12 (11/12) Interactive visualization and effective data communication I       Week 13 (11/19) Interactive visualization and effective data communication II      Week 14 (11/26) Thanksgiving Holiday         Week 15 (12/3) Final project workshop: review project progress, preliminary presentations      Week 16 (12/10) Final Project       ">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/schedule/">
@@ -238,7 +238,7 @@
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/schedule/">
   <meta property="og:title" content="Schedule | Introduction to Health Data Science - PM 566">
   <meta property="og:description" content="  Here’s your roadmap for the semester!
-  Readings should be completed before each class session  Class materials (slides, in-class activities, etc.) will be added on the day of class  Assignments are due by 11:59 PM on the day they are due    Week 1 (8/19) Introduction to Data Science tools: R, Python, Markdown, Git, command line tools       Week 2 (8/26) Version Control &amp; Reproducible Research       Week 3 (9/2) Exploratory data analysis       Week 4 (9/9) Data visualization      Week 5 (9/16) Data cleaning and wrangling       Week 6 (9/23) Text Mining      Week 7 (9/30) Scraping, APIs, and Regular Expressions       Week 8 (10/7) Midterm Exam (No class)        Week 9 (10/14) High performance computing, cloud computing      Week 10 (10/21) Managing big data, SQL and non-SQL languages, Google BigQuery       Week 11 (10/28) Interactive visualization and effective data communication I       Week 12 (11/4) Interactive visualization and effective data communication II      Week 13 (11/11) Final project workshop: review project progress, preliminary presentations      Week 14 (11/18) Final Project       "><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+  Readings should be completed before each class session  Class materials (slides, in-class activities, etc.) will be added on the day of class  Assignments are due by 11:59 PM on the day they are due    Week 1 (8/27) Introduction to Data Science tools: R, Python, Markdown, Git, command line tools       Week 2 (9/3) Version Control &amp; Reproducible Research       Week 3 (9/10) Exploratory data analysis       Week 4 (9/17) Data visualization      Week 5 (9/24) Data cleaning and wrangling       Week 6 (10/1) Text Mining      Week 7 (10/8) Scraping, APIs, and Regular Expressions       Week 8 (10/15) Fall Recess (No class)         Week 9 (10/22) Midterm Exam        Week 10 (10/29) High performance computing, cloud computing      Week 11 (11/5) Managing big data, SQL and non-SQL languages, Google BigQuery       Week 12 (11/12) Interactive visualization and effective data communication I       Week 13 (11/19) Interactive visualization and effective data communication II      Week 14 (11/26) Thanksgiving Holiday         Week 15 (12/3) Final project workshop: review project progress, preliminary presentations      Week 16 (12/10) Final Project       "><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -518,7 +518,7 @@
 <table class="table schedule" style="max-width:100%">
     <tbody>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 1 (8/19)</td>
+            <td align="right" style="width:20%;text-align:right">Week 1 (8/27)</td>
             <td style="width:50%;text-align:left">Introduction to Data Science tools: R, Python, Markdown, Git, command line tools</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/01-reading/">
@@ -531,7 +531,7 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 2 (8/26)</td>
+            <td align="right" style="width:20%;text-align:right">Week 2 (9/3)</td>
             <td style="width:50%;text-align:left">Version Control &amp; Reproducible Research</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/02-reading/">
@@ -544,7 +544,7 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 3 (9/2)</td>
+            <td align="right" style="width:20%;text-align:right">Week 3 (9/10)</td>
             <td style="width:50%;text-align:left">Exploratory data analysis</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/03-reading/">
@@ -557,7 +557,7 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 4 (9/9)</td>
+            <td align="right" style="width:20%;text-align:right">Week 4 (9/17)</td>
             <td style="width:50%;text-align:left">Data visualization</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/04-reading/">
@@ -569,7 +569,7 @@
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 5 (9/16)</td>
+            <td align="right" style="width:20%;text-align:right">Week 5 (9/24)</td>
             <td style="width:50%;text-align:left">Data cleaning and wrangling</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/05-reading/">
@@ -582,7 +582,7 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 6 (9/23)</td>
+            <td align="right" style="width:20%;text-align:right">Week 6 (10/1)</td>
             <td style="width:50%;text-align:left">Text Mining</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/06-reading/">
@@ -594,7 +594,7 @@
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 7 (9/30)</td>
+            <td align="right" style="width:20%;text-align:right">Week 7 (10/8)</td>
             <td style="width:50%;text-align:left">Scraping, APIs, and Regular Expressions</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/07-reading/">
@@ -607,8 +607,24 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 8 (10/7)</td>
-            <td style="width:50%;text-align:left">Midterm Exam (No class)</td>
+            <td align="right" style="width:20%;text-align:right">Week 8 (10/15)</td>
+            <td style="width:50%;text-align:left">Fall Recess (No class)</td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-book-reader fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-chalkboard-teacher fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-laptop-code"></i></font>
+            </td>
+        </tr>
+        <tr>
+            <td align="right" style="width:20%;text-align:right">Week 9 (10/22)</td>
+            <td style="width:50%;text-align:left">Midterm Exam</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-book-reader fa-lg"></i></font>
@@ -622,7 +638,7 @@
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 9 (10/14)</td>
+            <td align="right" style="width:20%;text-align:right">Week 10 (10/29)</td>
             <td style="width:50%;text-align:left">High performance computing, cloud computing</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/09-reading/">
@@ -634,7 +650,7 @@
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 10 (10/21)</td>
+            <td align="right" style="width:20%;text-align:right">Week 11 (11/5)</td>
             <td style="width:50%;text-align:left">Managing big data, SQL and non-SQL languages, Google BigQuery</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/10-reading/">
@@ -647,7 +663,7 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 11 (10/28)</td>
+            <td align="right" style="width:20%;text-align:right">Week 12 (11/12)</td>
             <td style="width:50%;text-align:left">Interactive visualization and effective data communication I</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/11-reading/">
@@ -660,7 +676,7 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 12 (11/4)</td>
+            <td align="right" style="width:20%;text-align:right">Week 13 (11/19)</td>
             <td style="width:50%;text-align:left">Interactive visualization and effective data communication II</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/12-reading/">
@@ -672,7 +688,23 @@
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 13 (11/11)</td>
+            <td align="right" style="width:20%;text-align:right">Week 14 (11/26)</td>
+            <td style="width:50%;text-align:left">Thanksgiving Holiday</td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-book-reader fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-chalkboard-teacher fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-laptop-code"></i></font>
+            </td>
+        </tr>
+        <tr>
+            <td align="right" style="width:20%;text-align:right">Week 15 (12/3)</td>
             <td style="width:50%;text-align:left">Final project workshop: review project progress, preliminary presentations</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/13-reading/">
@@ -684,7 +716,7 @@
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 14 (11/18)</td>
+            <td align="right" style="width:20%;text-align:right">Week 16 (12/10)</td>
             <td style="width:50%;text-align:left">Final Project</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/14-reading/">
