--- a/class/01-class/index.html
+++ b/class/01-class/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content=" Lab Exercise link
+  <meta name="description" content="  Lab Exercise link
 Download
  Slides link
  Links  The R Project for Statistical Computing R Studio   ">
@@ -239,7 +239,7 @@ Download
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/class/01-class/">
   <meta property="og:title" content="Look at Data / Up and Running in R and ggplot | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content=" Lab Exercise link
+  <meta property="og:description" content="  Lab Exercise link
 Download
  Slides link
  Links  The R Project for Statistical Computing R Studio   "><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
@@ -563,6 +563,7 @@ Download
                     <div class="article-style">
                         
 <!-- BLOGDOWN-HEAD -->
+<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 <!-- /BLOGDOWN-HEAD -->
 
 
