--- a/class/07-class/index.html
+++ b/class/07-class/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content=" Lab Exercise link
+  <meta name="description" content="  Lab Exercise link
  Slides link
  Links Here is an extended example of web scraping (link) that will be featured in the class.
  ">
@@ -239,7 +239,7 @@
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/class/07-class/">
   <meta property="og:title" content="Week 7: Scraping, APIs, and Regular Expressions | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content=" Lab Exercise link
+  <meta property="og:description" content="  Lab Exercise link
  Slides link
  Links Here is an extended example of web scraping (link) that will be featured in the class.
  "><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
@@ -563,6 +563,7 @@
                     <div class="article-style">
                         
 <!-- BLOGDOWN-HEAD -->
+<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 <!-- /BLOGDOWN-HEAD -->
 
 
