--- a/class/08-class/index.html
+++ b/class/08-class/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content=" Lab Exercise To be announced
+  <meta name="description" content="  Lab Exercise To be announced
  Slides To be announced
  Links To be announced
  ">
@@ -239,7 +239,7 @@
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/class/08-class/">
   <meta property="og:title" content="Midterm Exam | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content=" Lab Exercise To be announced
+  <meta property="og:description" content="  Lab Exercise To be announced
  Slides To be announced
  Links To be announced
  "><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
@@ -563,6 +563,7 @@
                     <div class="article-style">
                         
 <!-- BLOGDOWN-HEAD -->
+<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 <!-- /BLOGDOWN-HEAD -->
 
 
