--- a/class/09-class/index.html
+++ b/class/09-class/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content=" Lab Exercise link
+  <meta name="description" content="  Lab Exercise link
  Slides link
  Links  CRAN Task View on High-Performance Computing (link) USC’s Center for Advance Research Computing (CARC) (link)   ">
 
@@ -238,7 +238,7 @@
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/class/09-class/">
   <meta property="og:title" content="High performance computing, cloud computing | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content=" Lab Exercise link
+  <meta property="og:description" content="  Lab Exercise link
  Slides link
  Links  CRAN Task View on High-Performance Computing (link) USC’s Center for Advance Research Computing (CARC) (link)   "><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
@@ -561,6 +561,7 @@
                     <div class="article-style">
                         
 <!-- BLOGDOWN-HEAD -->
+<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 <!-- /BLOGDOWN-HEAD -->
 
 
