--- a/class/index.html
+++ b/class/index.html
@@ -543,6 +543,7 @@
 
           <div class="article-style">
             
+<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <p>I’ll post relevant materials (slides, example code, in-class activities, etc.) from each class session.</p>
