--- a/website/content/assignment/01-lab.html
+++ b/website/content/assignment/01-lab.html
@@ -1,5 +1,8 @@
-<script src="01-lab_files/header-attrs-2.10/header-attrs.js"></script>
-
+---
+title: "Lab 01 - Hello R!"
+output: tufte::tufte_html
+link-citations: yes
+---
 
 <div id="learning-goals" class="section level1">
 <h1>Learning goals</h1>
