--- a/website/static/slides/01-welcome/slides.html
+++ b/website/static/slides/01-welcome/slides.html
@@ -3,7 +3,7 @@
   <head>
     <title>Welcome!</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.3/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.10/header-attrs.js"></script>
     <link rel="stylesheet" href="theme.css" type="text/css" />
   </head>
   <body>
@@ -19,24 +19,27 @@ class: center, middle, title-slide
 
 
 
+```
+## [1] "theme.css"
+```
 
 # Instructors
 
-- Meredith Franklin
-- Emil Hansen
-- Abigail Horn
 - George Gerald Vega Yon
+- Kim Siegmund
+- Abigail Horn
+
 
 ---
 
 # Blackboard + Website
 
-https://blackboard.usc.edu/  
-"Official" class website  
-Announcements + Zoom + Grading
-
 https://github.com/USCbiostats/PM566  
+Official class website
 Syllabus, reading materials, slides, labs and assignments
+
+https://blackboard.usc.edu/  
+Announcements + Grading
 
 ---
 
@@ -64,7 +67,38 @@ collection of knowledge about
 
 ---
 
-![](img/demand.png)
+&lt;figure align="center"&gt;
+&lt;img src="img/data-science-drew-conway.jpg" style="width:600px"&gt;
+&lt;figcaption&gt;Source: https://berkeleysciencereview.com/2013/07/how-to-become-a-data-scientist-before-you-graduate/ Original by Drew Conway.&lt;/figcaption&gt;
+&lt;/figure&gt;
+
+---
+
+# Data science can be really cool
+
+&lt;figure align="center"&gt;
+&lt;img src="https://imgs.xkcd.com/comics/regular_expressions.png" style="width:450px"&gt;
+&lt;figcaption&gt;Source: https://xkcd.com/208/&lt;/figcaption&gt;
+&lt;/figure&gt;
+
+---
+
+# With great power comes great responsibility
+
+&lt;figure align="center"&gt;
+&lt;img src="https://imgs.xkcd.com/comics/extrapolating.png" style="width:500px"&gt;
+&lt;figcaption&gt;Fuente: https://xkcd.com/605/&lt;/figcaption&gt;
+&lt;/figure&gt;
+
+---
+
+&lt;img src="img/demand.png" style="width:800px;"&gt;
+
+(Also see [here](https://www.amstat.org/asa/News/New-Report-Highlights-Growing-Demand-for-Data-Science-Analytics-Talent.aspx), 
+and [here](https://www.ibm.com/downloads/cas/3RL3VXGA),
+and [here](https://www.forbes.com/sites/gilpress/2021/06/27/salaries-and-job-opportunities-for-data-scientists-continue-to-rise/),
+and [here](https://www.glassdoor.com/research/job-market-report/)
+)
 
 ---
 
@@ -128,17 +162,17 @@ We will be back for labs at 2:30
 
 ---
 
-# First Lab 🎉
+# First Lab 
 
 The lab exercises can be found at: 
 
-Website -&gt; Schedule -&gt; &lt;svg style="height:0.8em;top:.04em;position:relative;" viewBox="0 0 640 512"&gt;&lt;path d="M208 352c-2.39 0-4.78.35-7.06 1.09C187.98 357.3 174.35 360 160 360c-14.35 0-27.98-2.7-40.95-6.91-2.28-.74-4.66-1.09-7.05-1.09C49.94 352-.33 402.48 0 464.62.14 490.88 21.73 512 48 512h224c26.27 0 47.86-21.12 48-47.38.33-62.14-49.94-112.62-112-112.62zm-48-32c53.02 0 96-42.98 96-96s-42.98-96-96-96-96 42.98-96 96 42.98 96 96 96zM592 0H208c-26.47 0-48 22.25-48 49.59V96c23.42 0 45.1 6.78 64 17.8V64h352v288h-64v-64H384v64h-76.24c19.1 16.69 33.12 38.73 39.69 64H592c26.47 0 48-22.25 48-49.59V49.59C640 22.25 618.47 0 592 0z"/&gt;&lt;/svg&gt; -&gt; Lab Exercise
+Website -&gt; Schedule -&gt; <svg aria-hidden="true" role="img" viewBox="0 0 640 512" style="height:1em;width:1.25em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:currentColor;overflow:visible;position:relative;"><path d="M208 352c-2.39 0-4.78.35-7.06 1.09C187.98 357.3 174.35 360 160 360c-14.35 0-27.98-2.7-40.95-6.91-2.28-.74-4.66-1.09-7.05-1.09C49.94 352-.33 402.48 0 464.62.14 490.88 21.73 512 48 512h224c26.27 0 47.86-21.12 48-47.38.33-62.14-49.94-112.62-112-112.62zm-48-32c53.02 0 96-42.98 96-96s-42.98-96-96-96-96 42.98-96 96 42.98 96 96 96zM592 0H208c-26.47 0-48 22.25-48 49.59V96c23.42 0 45.1 6.78 64 17.8V64h352v288h-64v-64H384v64h-76.24c19.1 16.69 33.12 38.73 39.69 64H592c26.47 0 48-22.25 48-49.59V49.59C640 22.25 618.47 0 592 0z"/></svg> -&gt; Lab Exercise
 
-https://elastic-khorana-70231e.netlify.app/assignment/01-lab/
+https://USCbiostats.github.io/PM566/assignment/01-lab/
 
 Related Github Issue
 
-https://github.com/USCbiostats/PM566/issues/19
+https://github.com/USCbiostats/PM566/issues/38
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
