deploy: 1feab8f850d0671d235cac532215c63e00d74b06

--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
 
         <ul class="icon-list">
             <li><i class="fas fa-user"></i> <a> George Vega Yon, Kim Siegmund, Abigail Horn</a></li>
-            <li><i class="fas fa-university"></i> TBA</li>
+            <li><i class="fas fa-university"></i> </li>
             <li><i class="fas fa-envelope"></i> <a href="mailto:vegayon@usc.edu"> vegayon@usc.edu</a></li>
         </ul>
     </div>
