deploy: dfe43b2db5f3c58cc5260930e4e9f33658e7310a

--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
 
         <ul class="icon-list">
             <li><i class="fas fa-user"></i> <a> George Vega Yon, Kim Siegmund, Abigail Horn</a></li>
-            <li><i class="fas fa-university"></i> &lt;a href=&#34;https://web-app.usc.edu/maps/hscmap.pdf&#34; target=&#34;_blank&#34;&gt;Hastings Auditorium (HSC)&lt;/a&gt;</li>
+            <li><i class="fas fa-university"></i> Hastings Auditorium (HSC)</li>
             <li><i class="fas fa-envelope"></i> <a href="mailto:vegayon@usc.edu"> vegayon@usc.edu</a></li>
         </ul>
     </div>
