--- a/website/static/slides/02-version-control/slides.html
+++ b/website/static/slides/02-version-control/slides.html
@@ -4,6 +4,7 @@
     <title>Version control and reproducible research</title>
     <meta charset="utf-8" />
     <meta name="author" content="George G. Vega Yon" />
+    <script src="libs/header-attrs-2.8/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
