--- a/website/content/assignment/09-hw3.html
+++ b/website/content/assignment/09-hw3.html
@@ -2,14 +2,15 @@
 title: "Assignment 03 - Web Scraping and Text Mining"
 output: tufte::tufte_html
 link-citations: yes
+date: 2021-09-10
 ---
 
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
+<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="due-date" class="section level2">
 <h2>Due Date</h2>
-<p>October 14, 2020 by midnight Pacific time.</p>
+<p>November 5, 2021 by midnight Pacific time.</p>
 <p>The learning objectives are to conduct data scraping and perform text mining.</p>
 </div>
 <div id="apis" class="section level2">
