--- a/website/content/assignment/11-hw4.html
+++ b/website/content/assignment/11-hw4.html
@@ -1,13 +1,15 @@
 ---
 title: "Assignment 04 - HPC and SQL"
 output: tufte::tufte_html
+date: 2021-09-10
 ---
 
+<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="due-date" class="section level2">
 <h2>Due Date</h2>
-<p><del>October 28</del> November 4th, 2020 by midnight Pacific time.</p>
+<p>November 19, 2021 by midnight Pacific time.</p>
 <p>The learning objectives are to conduct data scraping and perform text mining.</p>
 </div>
 <div id="hpc" class="section level2">
