--- a/website/content/assignment/03-hw1.html
+++ b/website/content/assignment/03-hw1.html
@@ -2,13 +2,15 @@
 title: "Assignment 01 - Exploratory Data Analysis"
 output: tufte::tufte_html
 link-citations: yes
+date: 2021-09-10
 ---
 
+<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="due-date" class="section level1">
 <h1>Due Date</h1>
-<p>This assignment is due at the end of the day September 9th, 2020</p>
+<p>This assignment is due at the end of the day September 24th, 2021</p>
 </div>
 <div id="learning-goals" class="section level1">
 <h1>Learning Goals</h1>
