--- a/website/content/assignment/08-midterm.html
+++ b/website/content/assignment/08-midterm.html
@@ -1,12 +1,14 @@
 ---
 title: "Midterm Exam/Project"
 output: html_document
+date: 2021-09-10
 ---
 
+<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <pre class="r"><code>knitr::opts_chunk$set(include  = TRUE)</code></pre>
-<p>Due Friday, October 9th, 2020 by midnight Pacific time</p>
+<p>Due Friday, October 22th, 2021 by midnight Pacific time</p>
 <p><strong>Learning Objective</strong> To apply the skills learned in PM 566 (up to 9/30) by analyzing and interpreting a dataset of your choice.</p>
 <p><strong>Narrative</strong> Through this project you will launch a portfolio of data science projects that will become seminal for your job hunt. This midterm is a stepping stone for the final project.
 The first step in any data analysis is to have a dataset for which you have formulated an interesting question. If you do not have a dataset to work with, you may choose one from our <a href="https://elastic-khorana-70231e.netlify.app/reference/#data">list of suggestions</a>. With your dataset, formulate a clear and concise question to answer and conduct data wrangling, exploratory data analysis, and data visualization to explore/answer this question.</p>
