Updating dates for regex

--- a/website/content/assignment/07-lab.html
+++ b/website/content/assignment/07-lab.html
@@ -1,12 +1,12 @@
 ---
 title: "Lab 07 - Web scraping and Regular Expressions"
 output: html_document
+date: 2021-10-07
 ---
 
 <script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<pre class="r"><code>knitr::opts_chunk$set(include  = TRUE)</code></pre>
 <div id="learning-goals" class="section level1">
 <h1>Learning goals</h1>
 <ul>
