--- a/website/content/assignment/10-lab.html
+++ b/website/content/assignment/10-lab.html
@@ -2,9 +2,10 @@
 title: "Lab 10 - SQL"
 output: tufte::tufte_html
 link-citations: yes
+date: November 5, 2021
 ---
 
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
+<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="setup" class="section level1">
